Fixed some icons in the hobbies modal section and added a functionality to the download CV button

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#hobbiesModal">
                     Hobbies & Interests
                 </button>
-                <a href="#" class="cv">Download My CV</a>
+                <!-- Download CV Button -->
+                 <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="cv" download>Download My CV</a>
             </div>
         </div>
     </section>
@@ -177,25 +178,27 @@
                     <h5 class="modal-title" id="hobbiesModalLabel">
                         <img src="img/RD.png" alt="Hobbies Icon"> Hobbies & Interests
                     </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="custom-close-btn" data-bs-dismiss="modal" aria-label="Close">
+                        <i class="fas fa-times"></i>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <div class="row text-center">
                         <!-- Hobby 1: Gaming -->
                         <div class="col-4">
-                            <i class="bi bi-controller" style="font-size: 2rem; color: #0077b5;"></i>
+                            <i class="fas fa-gamepad" style="font-size: 2rem; color: #000cb5;"></i>
                             <h6>Gaming</h6>
                             <p>Exploring RPGs and strategy games to fuel creativity.</p>
                         </div>
                         <!-- Hobby 2: Fitness -->
                         <div class="col-4">
-                            <i class="bi bi-dumbbell" style="font-size: 2rem; color: #00c8ff;"></i>
+                            <i class="fas fa-dumbbell" style="font-size: 2rem; color: #000cb5;"></i>
                             <h6>Fitness</h6>
                             <p>Staying disciplined with boxing and jogging.</p>
                         </div>
                         <!-- Hobby 3: Tech Exploration -->
                         <div class="col-4">
-                            <i class="bi bi-laptop" style="font-size: 2rem; color: #0086cc;"></i>
+                            <i class="fas fa-desktop" style="font-size: 2rem; color: #000cb5;"></i>
                             <h6>Tech</h6>
                             <p>Experimenting with tools and learning new tech.</p>
                         </div>
