Added some appropriate icons in the menu drawer in navbar

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             </div>
             <div>
                 <a href="#" class="nav-menu-item"><i class="fas fa-home me-3"></i>Home</a>
-                <a href="#about-section" class="nav-menu-item"><i class="fas fa-home me-3"></i>About Me</a>
-                <a href="#skills-section" class="nav-menu-item"><i class="fab fa-product-hunt me-3"></i>Skills</a>
-                <a href="#grades-section" class="nav-menu-item"><i class="fab fa-product-hunt me-3"></i>Grades</a>
-                <a href="#projects-section" class="nav-menu-item"><i class="fas fa-search me-3"></i>My Projects</a>
-                <a href="#work-section" class="nav-menu-item"><i class="fas fa-wrench me-3"></i>Work-Experience</a>
+                <a href="#about-section" class="nav-menu-item"><i class="fas fa-user me-3"></i>About Me</a>
+                <a href="#skills-section" class="nav-menu-item"><i class="fas fa-cogs me-3"></i>Skills</a>
+                <a href="#grades-section" class="nav-menu-item"><i class="fas fa-graduation-cap me-3"></i>Grades</a>
+                <a href="#projects-section" class="nav-menu-item"><i class="fas fa-folder-open me-3"></i>My Projects</a>
+                <a href="#work-section" class="nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work-Experience</a>
             </div>
         </div>
     </div>
