changed the icon of thee navbar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="flex3 text-center" id="siteBrand">
                     <a href="#hero" id="logoLink">
-                        <img src="../portfolio-website/img/bash-logo.png" alt="Ricardo Danganan Logo" id="navbarLogo">
+                        <img src="/portfolio-website/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbarLogo">
                     </a>
                 </div>
                 <div class="flex2 text-end d-block d-md-none">
