--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             </div>
             <div class="flex2 text-center">
-                <div><strong>Welcome to my Portfolio Website</strong></div>
+                <div><strong>Welcome to my Portfolio Website (Still in development)</strong></div>
             </div>
             <div class="flex1">
 
