Format the work and education section into a timeline

--- a/index.html
+++ b/index.html
@@ -254,9 +254,6 @@
 
     <!-- Education Section -->
     <section id="education" class="py-5">
-
-        <hr class="section-divider"> <!-- Section Divider -->
-
         <div class="container">
             <h2 class="fw-bold text-center text-primary mb-4">Module Grades and Honors</h2>
             <div class="accordion" id="educationAccordion">
@@ -805,106 +802,160 @@
 
     <!-- Parallax Separator -->
     <div id="work-section" class="parallax-separator">
-        <a href="#education-experience" class="parallax-title">Education</a>
+        <a href="#education-experience" class="parallax-title">Work and Education</a>
     </div>
 
     <!-- Education and Work Experience Section -->
     <section id="education-experience" class="py-5">
-
-        <hr class="section-divider"> <!-- Section Divider -->
-
         <div class="container">
-            <h2 class="fw-bold text-center text-primary mb-4">Education and Work Experience</h2>
-            <div class="row">
-                <!-- Work Experience Section -->
-                <div class="col-md-6">
-                    <h3 class="fw-bold text-light text-center mb-4"><i class="bi bi-briefcase me-2"></i>Work
-                        Experience</h3>
-                    <div class="timeline">
-                        <!-- Typetec -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/typetec_logo.jpg" alt="Typetec Logo" class="me-3"
-                                style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">Intern Technical Support Engineer</h5>
-                                <p class="text-light">Typetec (Jan 2024 - Aug 2024, 8 months)</p>
-                                <p>Dublin, Ireland (Hybrid)</p>
-                                <p>IT Desktop Support, Cybersecurity Monitoring, Installations and Managing User
-                                    Accounts.</p>
-                            </div>
+            <div class="education-timeline">
+                <!-- Timeline Items -->
+
+                <!-- Fourth Year -->
+                <div class="education-timeline-item education-timeline-right">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2024-Present</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                         </div>
-                        <!-- KKR -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/kkr_logo.jpg" alt="KKR Logo" class="me-3" style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">IT Support Engineer</h5>
-                                <p class="text-light">KKR (Jun 2024 - July 2024, 2 months)</p>
-                                <p>Dublin, Ireland (On-site)</p>
-                                <p>On-Site IT Support, Network Monitoring and Troubleshooting.</p>
-                            </div>
-                        </div>
-                        <!-- Currys -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/currysplc_logo.jpg" alt="Currys Logo" class="me-3"
-                                style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">IT Hardware Sales Associate</h5>
-                                <p class="text-light">Currys plc (Nov 2019 - Apr 2020, 6 months)</p>
-                                <p>Bray, Ireland (On-site)</p>
-                                <p>Hardware Solutions and Customer Service.</p>
-                            </div>
-                        </div>
-                        <!-- Healthcare Assistant -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/firstcare_ireland_logo.jpg" alt="FirstCare Logo" class="me-3"
-                                style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">Healthcare Assistant</h5>
-                                <p class="text-light">FirstCare Ireland (Mar 2012 - Jun 2019, 7 years 4 months)</p>
-                                <p>Wicklow, Ireland (On-site)</p>
-                                <p>Communication and Teamwork.</p>
-                            </div>
-                        </div>
+                        <h5 class="fw-bold text-primary">
+                            Technological University Dublin
+                        </h5>
+                        <p>4th Year (September 2024 - Present)</p>
+                        <p>Bachelor of Science (Honours) Computing in IT Management</p>
+                        <p>Web Development, Cloud Computing, Server Administrations, Scripting, Cybersecurity and Dev-Ops.</p>
+                        <button class="education-timeline-button">Learn More</button>
                     </div>
                 </div>
-                <!-- Education Section -->
-                <div class="col-md-6">
-                    <h3 class="fw-bold text-light text-center mb-4"><i class="fa fa-graduation-cap me-2"></i>Education
-                    </h3>
-                    <div class="timeline">
-                        <!-- Technological University Dublin -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo" class="me-3"
-                                style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">Technological University Dublin</h5>
-                                <p class="text-light">Bachelor of Science (Honours), Computing in IT Management (Sep
-                                    2021 - Jun 2025)</p>
-                                <p>Bash/Powershell Scripting, Web Development, Networking, Database Management,
-                                    Programming, Cloud computing, IT Management</p>
-                            </div>
+                
+                <!-- Typetec Ltd -->
+                <div class="education-timeline-item education-timeline-left">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2024</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/Typeetec-logo-2.jpg" alt="Typetec Logo">
                         </div>
-                        <!-- Bray Institute Level 6 -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/Bife-3.png" alt="Bray Institute Logo" class="me-3"
-                                style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
-                                <p class="text-light">QQI Level 6 in Computer Networks and Systems (Sep 2020 - May
-                                    2021)</p>
-                                <p>Powershell Scripting, Web Design, Networking, Mobile app development.</p>
-                            </div>
+                        <h5 class="fw-bold text-primary">
+                            Typetec Ltd
+                        </h5>
+                        <p>Intern Technical Support Engineer - (Jan 2024 - Aug 2024) <br> (On-Site)</p>
+                        <p>IT Desktop Support, Cybersecurity Monitoring, Software Installations and Server Administrations.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+                
+                <!-- KKR -->
+                <div class="education-timeline-item education-timeline-right">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2024</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/kkr_logo.jpg" alt="KKR Logo">
                         </div>
-                        <!-- Bray Institute Level 5 -->
-                        <div class="timeline-item mb-4 d-flex">
-                            <img src="img/Bife-3.png" alt="Bray Institute Logo" class="me-3"
-                                style="width: 50px; height: 50px;">
-                            <div>
-                                <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
-                                <p class="text-light">QQI Level 5 in Computer Science (Sep 2019 - May 2020)</p>
-                                <p>Web Design, Mobile app development, Programming.</p>
-                            </div>
+                        <h5 class="fw-bold text-primary">KKR</h5>
+                        <p>Intern IT Support - (Jun 2024 - Jul 2024) (On - Site)</p>
+                        <p>On-Site IT Support, Hardware Installations, Network Monitoring and Troubleshooting.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- 3rd Year -->
+                <div class="education-timeline-item education-timeline-left">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2023</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                         </div>
+                        <h5 class="fw-bold text-primary">
+                            Technological University Dublin
+                        </h5>
+                        <p>3rd Year (September 2023 - Jan 2024)</p>
+                        <p>Bachelor of Science (Honours) Computing in IT Management</p>
+                        <p>Server-side Web Development, Cloud Computing, Networking, Database Management, Operating Systems and Data Analysis.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- 2nd Year -->
+                <div class="education-timeline-item education-timeline-right">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2022</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
+                        </div>
+                        <h5 class="fw-bold text-primary">
+                            Technological University Dublin
+                        </h5>
+                        <p>2nd Year (September 2022 - June 2023)</p>
+                        <p>Bachelor of Science (Honours) Computing in IT Management</p>
+                        <p>Client-Side Web Development, Database Management, Networking, Scripting Automation and Software Quality Assurance.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- 1st Year -->
+                <div class="education-timeline-item education-timeline-left">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2021</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
+                        </div>
+                        <h5 class="fw-bold text-primary">
+                            Technological University Dublin
+                        </h5>
+                        <p>1st Year (September 2021 - June 2022)</p>
+                        <p>Bachelor of Science (Honours) Computing in IT Management</p>
+                        <p>Visual Design, Software Development, Systems Analysis, Database Fundamentals and Operating Systems.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- PLC Level 6 -->
+                <div class="education-timeline-item education-timeline-right">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2020</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/Bife-3.png" alt="TU Dublin Logo">
+                        </div>
+                        <h5 class="fw-bold text-primary">
+                            Bray Institute of Further Education
+                        </h5>
+                        <p>PLC Level 6 (September 2020 - June 2021)</p>
+                        <p>QQI Level 6 in Computer Networks and Systems</p>
+                        <p>Web Design, Programming, Scripting, Operating Systems and Mobile App Development.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- 1st Year -->
+                <div class="education-timeline-item education-timeline-left">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2019</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/currysplc_logo.jpg" alt="TU Dublin Logo">
+                        </div>
+                        <h5 class="fw-bold text-primary">
+                            Currys
+                        </h5>
+                        <p>IT Hardware Sales Associate (Nov 2019 - Apr 2020) (On-Site)</p>
+                        <p>Hardware Solutions and Customer Service.</p>
+                        <button class="education-timeline-button">Learn More</button>
+                    </div>
+                </div>
+
+                <!-- PLC Level 6 -->
+                <div class="education-timeline-item education-timeline-right">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2019</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/Bife-3.png" alt="TU Dublin Logo">
+                        </div>
+                        <h5 class="fw-bold text-primary">
+                            Bray Institute of Further Education
+                        </h5>
+                        <p>PLC Level 5 (September 2019 - June 2020)</p>
+                        <p>QQI Level 5 in Computer Science</p>
+                        <p>Web Design, Programming, Operating Systems and Mobile App Development.</p>
+                        <button class="education-timeline-button">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -935,6 +986,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="js/scroll-animation.js"></script>
+    <script src="js/journey.js"></script>
     <script src="js/aboutMe.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/script.js"></script>
