Added some links and Animations to the timeline

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="#skills-section" class="nav-menu-item"><i class="fas fa-cogs me-3"></i>Skills</a>
                 <a href="#grades-section" class="nav-menu-item"><i class="fas fa-graduation-cap me-3"></i>Grades</a>
                 <a href="#projects-section" class="nav-menu-item"><i class="fas fa-folder-open me-3"></i>My Projects</a>
-                <a href="#work-section" class="nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work-Experience</a>
+                <a href="#work-section" class="nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work and Education</a>
             </div>
         </div>
     </div>
@@ -824,7 +824,9 @@
                         <p>4th Year (September 2024 - Present)</p>
                         <p>Bachelor of Science (Honours) Computing in IT Management</p>
                         <p>Web Development, Cloud Computing, Server Administrations, Scripting, Cybersecurity and Dev-Ops.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.tudublin.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
                 
@@ -840,7 +842,9 @@
                         </h5>
                         <p>Intern Technical Support Engineer - (Jan 2024 - Aug 2024) <br> (On-Site)</p>
                         <p>IT Desktop Support, Cybersecurity Monitoring, Software Installations and Server Administrations.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.typetec.ie//" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
                 
@@ -854,7 +858,9 @@
                         <h5 class="fw-bold text-primary">KKR</h5>
                         <p>Intern IT Support - (Jun 2024 - Jul 2024) (On - Site)</p>
                         <p>On-Site IT Support, Hardware Installations, Network Monitoring and Troubleshooting.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.kkr.com/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
@@ -871,7 +877,9 @@
                         <p>3rd Year (September 2023 - Jan 2024)</p>
                         <p>Bachelor of Science (Honours) Computing in IT Management</p>
                         <p>Server-side Web Development, Cloud Computing, Networking, Database Management, Operating Systems and Data Analysis.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.tudublin.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
@@ -888,7 +896,9 @@
                         <p>2nd Year (September 2022 - June 2023)</p>
                         <p>Bachelor of Science (Honours) Computing in IT Management</p>
                         <p>Client-Side Web Development, Database Management, Networking, Scripting Automation and Software Quality Assurance.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.tudublin.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
@@ -905,7 +915,9 @@
                         <p>1st Year (September 2021 - June 2022)</p>
                         <p>Bachelor of Science (Honours) Computing in IT Management</p>
                         <p>Visual Design, Software Development, Systems Analysis, Database Fundamentals and Operating Systems.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.tudublin.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
@@ -914,7 +926,7 @@
                     <div class="education-timeline-content">
                         <div class="education-timeline-date">2020</div>
                         <div class="education-timeline-icon">
-                            <img src="img/Bife-3.png" alt="TU Dublin Logo">
+                            <img src="img/Bife-3.png" alt="Bife-Logo">
                         </div>
                         <h5 class="fw-bold text-primary">
                             Bray Institute of Further Education
@@ -922,32 +934,36 @@
                         <p>PLC Level 6 (September 2020 - June 2021)</p>
                         <p>QQI Level 6 in Computer Networks and Systems</p>
                         <p>Web Design, Programming, Scripting, Operating Systems and Mobile App Development.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.bife.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
-                <!-- 1st Year -->
+                <!-- Currys -->
                 <div class="education-timeline-item education-timeline-left">
                     <div class="education-timeline-content">
                         <div class="education-timeline-date">2019</div>
                         <div class="education-timeline-icon">
-                            <img src="img/currysplc_logo.jpg" alt="TU Dublin Logo">
+                            <img src="img/currysplc_logo.jpg" alt="Currys-Logo">
                         </div>
                         <h5 class="fw-bold text-primary">
                             Currys
                         </h5>
                         <p>IT Hardware Sales Associate (Nov 2019 - Apr 2020) (On-Site)</p>
                         <p>Hardware Solutions and Customer Service.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.currys.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
-                <!-- PLC Level 6 -->
+                <!-- PLC Level 5 -->
                 <div class="education-timeline-item education-timeline-right">
                     <div class="education-timeline-content">
                         <div class="education-timeline-date">2019</div>
                         <div class="education-timeline-icon">
-                            <img src="img/Bife-3.png" alt="TU Dublin Logo">
+                            <img src="img/Bife-3.png" alt="Bife-Logo">
                         </div>
                         <h5 class="fw-bold text-primary">
                             Bray Institute of Further Education
@@ -955,9 +971,27 @@
                         <p>PLC Level 5 (September 2019 - June 2020)</p>
                         <p>QQI Level 5 in Computer Science</p>
                         <p>Web Design, Programming, Operating Systems and Mobile App Development.</p>
-                        <button class="education-timeline-button">Learn More</button>
+                        <a href="https://www.bife.ie/" target="_blank" class="education-timeline-button">
+                            Learn More
+                        </a>
                     </div>
                 </div>
+
+                <!-- Currys -->
+                <div class="education-timeline-item education-timeline-left">
+                    <div class="education-timeline-content">
+                        <div class="education-timeline-date">2012</div>
+                        <div class="education-timeline-icon">
+                            <img src="img/firstcare_ireland_logo.jpg" alt="First Care Ireland">
+                        </div>
+                        <h5 class="fw-bold text-primary">
+                            First-Care Ireland
+                        </h5>
+                        <p>Patient Care Assistant (Mar 2012 - June 2019) (On-Site)</p>
+                        <p>Communications and Team Work</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
