add the fixed top to the navbar as an alternative to sticky navbar feature

--- a/index.html
+++ b/index.html
@@ -25,52 +25,45 @@
 
 <body>
     <!-- Navbar -->
-    <div class="navbarMain">
-        <div class="flexMain">
-            <div class="flex1"></div>
-            <div class="flex2 text-center">
-                <div><strong>Welcome to my Portfolio Website (Still in development)</strong></div>
-            </div>
-            <div class="flex1"></div>
-        </div>
-    </div>
-    <div id="menuHolder" class="sticky-top">
-        <div role="navigation" class="sticky-top border-bottom border-top" id="mainNavigation">
-            <div class="flexMain">
-                <div class="flex2">
-                    <button class="whiteLink siteLink" style="border-right:1px solid #eaeaea" onclick="menuToggle()">
+    <div id="navbar-menuHolder">
+        <div role="navigation" class="border-bottom border-top" id="navbar-mainNavigation">
+            <div class="navbar-flexMain">
+                <div class="navbar-flex2">
+                    <button class="navbar-whiteLink navbar-siteLink" style="border-right:1px solid #eaeaea"
+                        onclick="navbarMenuToggle()">
                         <i class="fas fa-bars me-2"></i> MENU
                     </button>
                 </div>
-                <div class="flex3 text-center" id="siteBrand">
-                    <a href="#hero" id="logoLink">
-                        <img src="/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbarLogo">
+                <div class="navbar-flex3 text-center" id="navbar-siteBrand">
+                    <a href="#hero" id="navbar-logoLink">
+                        <img src="/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbar-logo">
                     </a>
                 </div>
-                <div class="flex2 text-end d-block d-md-none">
-                    <button class="whiteLink siteLink"><i class="fas fa-search"></i></button>
+                <div class="navbar-flex2 text-end d-block d-md-none">
+                    <button class="navbar-whiteLink navbar-siteLink"><i class="fas fa-search"></i></button>
                 </div>
-                <div class="flex2 text-end d-none d-md-block">
-                    <button class="blackLink siteLink" onclick="educationOpenModal('education-contactModal')">CONTACT
-                        ME</button>
+                <div class="navbar-flex2 text-end d-none d-md-block">
+                    <button class="navbar-blackLink navbar-siteLink"
+                        onclick="educationOpenModal('education-contactModal')">CONTACT ME</button>
                 </div>
             </div>
         </div>
 
-        <div id="menuDrawer">
+        <div id="navbar-menuDrawer">
             <div class="p-4 border-bottom">
                 <div class='row'>
                     <div class="col text-end ">
-                        <i class="fas fa-times" role="btn" onclick="menuToggle()"></i>
+                        <i class="fas fa-times" role="btn" onclick="navbarMenuToggle()"></i>
                     </div>
                 </div>
             </div>
             <div>
-                <a href="#" class="nav-menu-item"><i class="fas fa-home me-3"></i>Home</a>
-                <a href="#about-section" class="nav-menu-item"><i class="fas fa-user me-3"></i>About Me</a>
-                <a href="#skills-section" class="nav-menu-item"><i class="fas fa-cogs me-3"></i>Skills</a>
-                <a href="#projects-section" class="nav-menu-item"><i class="fas fa-folder-open me-3"></i>My Projects</a>
-                <a href="#work-section" class="nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work and
+                <a href="#" class="navbar-nav-menu-item"><i class="fas fa-home me-3"></i>Home</a>
+                <a href="#about-section" class="navbar-nav-menu-item"><i class="fas fa-user me-3"></i>About Me</a>
+                <a href="#skills-section" class="navbar-nav-menu-item"><i class="fas fa-cogs me-3"></i>Skills</a>
+                <a href="#projects-section" class="navbar-nav-menu-item"><i class="fas fa-folder-open me-3"></i>My
+                    Projects</a>
+                <a href="#work-section" class="navbar-nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work and
                     Education</a>
             </div>
         </div>
