remove the search bar in the navbar during mobile view

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div role="navigation" class="border-bottom border-top" id="navbar-mainNavigation">
             <div class="navbar-flexMain">
                 <div class="navbar-flex2">
-                    <button class="navbar-whiteLink navbar-siteLink" style="border-right:1px solid #eaeaea"
+                    <button class="navbar-whiteLink navbar-siteLink" style="border-right:1px solid #000000"
                         onclick="navbarMenuToggle()">
                         <i class="fas fa-bars me-2"></i> MENU
                     </button>
@@ -39,13 +39,11 @@
                         <img src="/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbar-logo">
                     </a>
                 </div>
-                <div class="navbar-flex2 text-end d-block d-md-none">
-                    <button class="navbar-whiteLink navbar-siteLink"><i class="fas fa-search"></i></button>
-                </div>
-                <div class="navbar-flex2 text-end d-none d-md-block">
-                    <button class="navbar-blackLink navbar-siteLink"
-                        onclick="educationOpenModal('education-contactModal')">CONTACT ME</button>
-                </div>
+                <div class="navbar-flex2 text-end">
+                    <button class="navbar-blackLink navbar-siteLink" onclick="educationOpenModal('education-contactModal')">
+                        CONTACT ME
+                    </button>
+                </div>                
             </div>
         </div>
 
