added a feature on the menu drawer that closes it when clicked anywhere on the site

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
                     </a>
                 </div>
                 <div class="navbar-flex2 text-end">
-                    <button class="navbar-blackLink navbar-siteLink" onclick="educationOpenModal('education-contactModal')">
+                    <button class="navbar-blackLink navbar-siteLink"
+                        onclick="educationOpenModal('education-contactModal')">
                         CONTACT ME
                     </button>
-                </div>                
+                </div>
             </div>
         </div>
 
@@ -65,6 +66,7 @@
                     Education</a>
             </div>
         </div>
+        <div id="navbar-overlay" onclick="closeMenu()"></div> <!-- Added overlay -->
     </div>
     <!-- End of Navbar -->
 
